--- a/CV/myCV/CMakeLists.txt
+++ b/CV/myCV/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(myCV_SRC
         interpolation.cpp
         translation.cpp
+        tColor.cpp
         )
 
 #add_executable(myCV ${myCV_SRC})
